[package]
name = "channel-bridge"
version = "0.5.0"
edition = "2021"
categories = ["embedded", "network"]
keywords = ["embedded", "network"]
description = "Blocking and async Sender and Receiver traits and implementations."
repository = "https://github.com/ivmarkov/channel-bridge"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.71"

[features]
default = ["std"]

std = ["embedded-io?/std", "embedded-svc?/std", "serde?/std"]
nightly = ["embedded-io-async", "embedded-svc?/nightly", "embedded-svc?/experimental", "edge-net?/nightly", "embassy-sync", "serde"]
portable-atomic = ["atomic-waker/portable-atomic"]
edge-net = ["dep:edge-net", "embassy-futures", "embedded-io", "log", "serde", "heapless", "postcard"]
embedded-svc = ["dep:embedded-svc", "embassy-futures", "log", "serde", "heapless", "postcard"]
wasm = ["gloo-net", "futures", "postcard/alloc"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
atomic-waker = { version = "1.1.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
heapless = { version = "0.7", optional = true }
prost = { version = "0.11", optional = true }
postcard = { version = "1.0.2", default-features = false, optional = true }
gloo-net = { version = "0.4", default-features = false, features = ["websocket"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
embassy-futures = { version = "0.1", optional = true }
embassy-sync = { version = "0.3", optional = true }
embedded-io = { version = "0.6", default-features = false, optional = true }
embedded-io-async = { version = "0.6", default-features = false, optional = true }
embedded-svc = { version = "0.26.1", default-features = false, optional = true }
edge-net = { version = "0.5", default-features = false, optional = true }
