[package]
name = "channel-bridge"
version = "0.9.0"
edition = "2021"
categories = ["embedded", "network"]
keywords = ["embedded", "network"]
description = "Blocking and async Sender and Receiver traits and implementations."
repository = "https://github.com/ivmarkov/channel-bridge"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.75"

[features]
default = ["std"]

std = ["embedded-io?/std", "embedded-svc?/std", "serde/std"]
portable-atomic = ["atomic-waker/portable-atomic"]
edge-ws = ["dep:edge-ws", "embassy-futures", "embedded-io", "embedded-io-async", "log", "heapless", "postcard"]
embedded-svc = ["dep:embedded-svc", "embassy-futures", "log", "heapless", "postcard"]
wasm = ["gloo-net", "futures", "postcard/alloc"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
atomic-waker = { version = "1.1.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.8", optional = true }
prost = { version = "0.11", optional = true }
postcard = { version = "1.0.2", default-features = false, optional = true }
gloo-net = { version = "0.6", default-features = false, features = ["websocket"], optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
embassy-sync = "0.6"
embassy-futures = { version = "0.1", optional = true }
embedded-io = { version = "0.6", default-features = false, optional = true }
embedded-io-async = { version = "0.6", default-features = false, optional = true }
embedded-svc = { version = "0.28", default-features = false, optional = true }
edge-ws = { version = "0.4", default-features = false, optional = true, features = ["io"] }
